--- a/assets/scss/common-styles/markdown.scss
+++ b/assets/scss/common-styles/markdown.scss
@@ -91,7 +91,8 @@
         padding: 5px 0px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         text-align: center;
-        margin-left: var(--image-margin);
+        //margin-left: var(--image-margin);
+        margin: 0 auto;
     }
 
     .img-caption-half {
