--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1897,19 +1897,20 @@
     height: 100%;
     object-fit: cover; }
 
-.light-theme .swiper-container {
-  height: 500px;
-  width: auto;
+.light-theme .swiper-container-landscape {
+  display: flex;
+  height: auto;
+  width: var(--image-width);
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto;
   padding: 2px;
   position: relative; }
-  .light-theme .swiper-container .swiper-pagination {
+  .light-theme .swiper-container-landscape .swiper-pagination {
     position: absolute;
-    bottom: 10px;
+    margin-bottom: 10px;
     width: 100%;
     text-align: center; }
-  .light-theme .swiper-container .swiper-pagination-bullet {
+  .light-theme .swiper-container-landscape .swiper-pagination-bullet {
     width: 12px;
     height: 12px;
     margin: 0 5px;
@@ -1917,17 +1918,56 @@
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
-  .light-theme .swiper-container .swiper-pagination-bullet-active {
+  .light-theme .swiper-container-landscape .swiper-pagination-bullet-active {
     background-color: #fcd116;
     opacity: 1; }
-  .light-theme .swiper-container .swiper-button-prev,
-  .light-theme .swiper-container .swiper-button-next {
+  .light-theme .swiper-container-landscape .swiper-button-prev,
+  .light-theme .swiper-container-landscape .swiper-button-next {
     opacity: 0; }
-  .light-theme .swiper-container .swiper-slide {
+  .light-theme .swiper-container-landscape .swiper-slide {
     display: flex;
     align-items: center;
     justify-content: center; }
-  .light-theme .swiper-container .swiper-slide img {
+  .light-theme .swiper-container-landscape .swiper-slide img {
+    height: auto;
+    width: 100%;
+    object-fit: contain;
+    border-color: grey;
+    border-width: 2px;
+    border-style: solid;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+
+.light-theme .swiper-container-portrait {
+  height: 500px;
+  width: auto;
+  overflow: hidden;
+  margin: 10px auto;
+  padding: 2px;
+  position: relative; }
+  .light-theme .swiper-container-portrait .swiper-pagination {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center; }
+  .light-theme .swiper-container-portrait .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: rgba(252, 209, 22, 0.6);
+    border-radius: 50%;
+    opacity: 0.5;
+    transition: opacity 0.3s ease; }
+  .light-theme .swiper-container-portrait .swiper-pagination-bullet-active {
+    background-color: #fcd116;
+    opacity: 1; }
+  .light-theme .swiper-container-portrait .swiper-button-prev,
+  .light-theme .swiper-container-portrait .swiper-button-next {
+    opacity: 0; }
+  .light-theme .swiper-container-portrait .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .light-theme .swiper-container-portrait .swiper-slide img {
     height: 100%;
     width: auto;
     object-fit: contain;
@@ -1944,19 +1984,20 @@
     height: 100%;
     object-fit: cover; }
 
-.dark-theme .swiper-container {
-  height: 500px;
-  width: auto;
+.dark-theme .swiper-container-landscape {
+  display: flex;
+  height: auto;
+  width: var(--image-width);
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto;
   padding: 2px;
   position: relative; }
-  .dark-theme .swiper-container .swiper-pagination {
+  .dark-theme .swiper-container-landscape .swiper-pagination {
     position: absolute;
-    bottom: 10px;
+    margin-bottom: 10px;
     width: 100%;
     text-align: center; }
-  .dark-theme .swiper-container .swiper-pagination-bullet {
+  .dark-theme .swiper-container-landscape .swiper-pagination-bullet {
     width: 12px;
     height: 12px;
     margin: 0 5px;
@@ -1964,17 +2005,56 @@
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
-  .dark-theme .swiper-container .swiper-pagination-bullet-active {
+  .dark-theme .swiper-container-landscape .swiper-pagination-bullet-active {
     background-color: #534504;
     opacity: 1; }
-  .dark-theme .swiper-container .swiper-button-prev,
-  .dark-theme .swiper-container .swiper-button-next {
+  .dark-theme .swiper-container-landscape .swiper-button-prev,
+  .dark-theme .swiper-container-landscape .swiper-button-next {
     opacity: 0; }
-  .dark-theme .swiper-container .swiper-slide {
+  .dark-theme .swiper-container-landscape .swiper-slide {
     display: flex;
     align-items: center;
     justify-content: center; }
-  .dark-theme .swiper-container .swiper-slide img {
+  .dark-theme .swiper-container-landscape .swiper-slide img {
+    height: auto;
+    width: 100%;
+    object-fit: contain;
+    border-color: lightgrey;
+    border-width: 2px;
+    border-style: solid;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+
+.dark-theme .swiper-container-portrait {
+  height: 500px;
+  width: auto;
+  overflow: hidden;
+  margin: 10px auto;
+  padding: 2px;
+  position: relative; }
+  .dark-theme .swiper-container-portrait .swiper-pagination {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center; }
+  .dark-theme .swiper-container-portrait .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: rgba(83, 69, 4, 0.6);
+    border-radius: 50%;
+    opacity: 0.5;
+    transition: opacity 0.3s ease; }
+  .dark-theme .swiper-container-portrait .swiper-pagination-bullet-active {
+    background-color: #534504;
+    opacity: 1; }
+  .dark-theme .swiper-container-portrait .swiper-button-prev,
+  .dark-theme .swiper-container-portrait .swiper-button-next {
+    opacity: 0; }
+  .dark-theme .swiper-container-portrait .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .dark-theme .swiper-container-portrait .swiper-slide img {
     height: 100%;
     width: auto;
     object-fit: contain;
@@ -2338,19 +2418,20 @@
     height: 100%;
     object-fit: cover; }
 
-.light-theme .swiper-container {
-  height: 500px;
-  width: auto;
+.light-theme .swiper-container-landscape {
+  display: flex;
+  height: auto;
+  width: var(--image-width);
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto;
   padding: 2px;
   position: relative; }
-  .light-theme .swiper-container .swiper-pagination {
+  .light-theme .swiper-container-landscape .swiper-pagination {
     position: absolute;
-    bottom: 10px;
+    margin-bottom: 10px;
     width: 100%;
     text-align: center; }
-  .light-theme .swiper-container .swiper-pagination-bullet {
+  .light-theme .swiper-container-landscape .swiper-pagination-bullet {
     width: 12px;
     height: 12px;
     margin: 0 5px;
@@ -2358,17 +2439,56 @@
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
-  .light-theme .swiper-container .swiper-pagination-bullet-active {
+  .light-theme .swiper-container-landscape .swiper-pagination-bullet-active {
     background-color: #fcd116;
     opacity: 1; }
-  .light-theme .swiper-container .swiper-button-prev,
-  .light-theme .swiper-container .swiper-button-next {
+  .light-theme .swiper-container-landscape .swiper-button-prev,
+  .light-theme .swiper-container-landscape .swiper-button-next {
     opacity: 0; }
-  .light-theme .swiper-container .swiper-slide {
+  .light-theme .swiper-container-landscape .swiper-slide {
     display: flex;
     align-items: center;
     justify-content: center; }
-  .light-theme .swiper-container .swiper-slide img {
+  .light-theme .swiper-container-landscape .swiper-slide img {
+    height: auto;
+    width: 100%;
+    object-fit: contain;
+    border-color: grey;
+    border-width: 2px;
+    border-style: solid;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+
+.light-theme .swiper-container-portrait {
+  height: 500px;
+  width: auto;
+  overflow: hidden;
+  margin: 10px auto;
+  padding: 2px;
+  position: relative; }
+  .light-theme .swiper-container-portrait .swiper-pagination {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center; }
+  .light-theme .swiper-container-portrait .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: rgba(252, 209, 22, 0.6);
+    border-radius: 50%;
+    opacity: 0.5;
+    transition: opacity 0.3s ease; }
+  .light-theme .swiper-container-portrait .swiper-pagination-bullet-active {
+    background-color: #fcd116;
+    opacity: 1; }
+  .light-theme .swiper-container-portrait .swiper-button-prev,
+  .light-theme .swiper-container-portrait .swiper-button-next {
+    opacity: 0; }
+  .light-theme .swiper-container-portrait .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .light-theme .swiper-container-portrait .swiper-slide img {
     height: 100%;
     width: auto;
     object-fit: contain;
@@ -2385,19 +2505,20 @@
     height: 100%;
     object-fit: cover; }
 
-.dark-theme .swiper-container {
-  height: 500px;
-  width: auto;
+.dark-theme .swiper-container-landscape {
+  display: flex;
+  height: auto;
+  width: var(--image-width);
   overflow: hidden;
-  margin: 10px;
+  margin: 10px auto;
   padding: 2px;
   position: relative; }
-  .dark-theme .swiper-container .swiper-pagination {
+  .dark-theme .swiper-container-landscape .swiper-pagination {
     position: absolute;
-    bottom: 10px;
+    margin-bottom: 10px;
     width: 100%;
     text-align: center; }
-  .dark-theme .swiper-container .swiper-pagination-bullet {
+  .dark-theme .swiper-container-landscape .swiper-pagination-bullet {
     width: 12px;
     height: 12px;
     margin: 0 5px;
@@ -2405,17 +2526,56 @@
     border-radius: 50%;
     opacity: 0.5;
     transition: opacity 0.3s ease; }
-  .dark-theme .swiper-container .swiper-pagination-bullet-active {
+  .dark-theme .swiper-container-landscape .swiper-pagination-bullet-active {
     background-color: #534504;
     opacity: 1; }
-  .dark-theme .swiper-container .swiper-button-prev,
-  .dark-theme .swiper-container .swiper-button-next {
+  .dark-theme .swiper-container-landscape .swiper-button-prev,
+  .dark-theme .swiper-container-landscape .swiper-button-next {
     opacity: 0; }
-  .dark-theme .swiper-container .swiper-slide {
+  .dark-theme .swiper-container-landscape .swiper-slide {
     display: flex;
     align-items: center;
     justify-content: center; }
-  .dark-theme .swiper-container .swiper-slide img {
+  .dark-theme .swiper-container-landscape .swiper-slide img {
+    height: auto;
+    width: 100%;
+    object-fit: contain;
+    border-color: lightgrey;
+    border-width: 2px;
+    border-style: solid;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1); }
+
+.dark-theme .swiper-container-portrait {
+  height: 500px;
+  width: auto;
+  overflow: hidden;
+  margin: 10px auto;
+  padding: 2px;
+  position: relative; }
+  .dark-theme .swiper-container-portrait .swiper-pagination {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center; }
+  .dark-theme .swiper-container-portrait .swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    margin: 0 5px;
+    background-color: rgba(83, 69, 4, 0.6);
+    border-radius: 50%;
+    opacity: 0.5;
+    transition: opacity 0.3s ease; }
+  .dark-theme .swiper-container-portrait .swiper-pagination-bullet-active {
+    background-color: #534504;
+    opacity: 1; }
+  .dark-theme .swiper-container-portrait .swiper-button-prev,
+  .dark-theme .swiper-container-portrait .swiper-button-next {
+    opacity: 0; }
+  .dark-theme .swiper-container-portrait .swiper-slide {
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .dark-theme .swiper-container-portrait .swiper-slide img {
     height: 100%;
     width: auto;
     object-fit: contain;
@@ -2877,7 +3037,7 @@
   padding: 5px 0px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  margin-left: var(--image-margin); }
+  margin: 0 auto; }
 
 .light-theme .img-caption-half {
   display: block;
@@ -3070,7 +3230,7 @@
   padding: 5px 0px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
-  margin-left: var(--image-margin); }
+  margin: 0 auto; }
 
 .dark-theme .img-caption-half {
   display: block;
