--- a/assets/scss/common-styles/pictures.scss
+++ b/assets/scss/common-styles/pictures.scss
@@ -17,11 +17,66 @@
     // *******************************************************
     // ** Swiper für markdown pictures
     // *******************************************************
-    .swiper-container {
+    .swiper-container-landscape {
+        display: flex;
+        height: auto;
+        width: var(--image-width);
+        overflow: hidden;
+        margin: 10px auto;
+        //margin-left: calc(var(--image-margin));
+        padding: 2px;
+        
+        position: relative;
+        
+        .swiper-pagination {
+            position: absolute;
+            margin-bottom: 10px;
+            width: 100%;
+            text-align: center;
+        }
+
+        .swiper-pagination-bullet {
+            width: 12px;
+            height: 12px;
+            margin: 0 5px;
+            background-color: themed(logo-yellow-60);
+            border-radius: 50%;
+            opacity: 0.5;
+            transition: opacity 0.3s ease;
+        }
+
+        .swiper-pagination-bullet-active {
+            background-color: themed(logo-yellow);
+            opacity: 1;
+        }
+
+        .swiper-button-prev,
+        .swiper-button-next {
+            opacity: 0;
+        }
+
+        .swiper-slide {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .swiper-slide img {
+            height: auto;
+            width: 100%;
+            object-fit: contain;
+            border-color: themed(table-line);
+            border-width: 2px;
+            border-style: solid;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+    }
+
+    .swiper-container-portrait {
         height: 500px;
         width: auto;
         overflow: hidden;
-        margin: 10px;
+        margin: 10px auto;
         padding: 2px;
         position: relative;
 
