--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -21,13 +21,13 @@
                             <img src="/img/logo-klein.png" alt="Haus der Sonne">
                             <ul>
                                 <li>
-                                    <a href="#">{{ T "AGoal" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "AGoal" }}</a>
                                 </li>
                                 <li>
                                     <a href="derVerein/Organisation">{{ T "AOrganization" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "ATransparency" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "ATransparency" }}</a>
                                 </li>
                                 <li>
                                     <a href="Finanzen">{{ T "AFinance" }}</a>
@@ -39,7 +39,7 @@
                                     <a href="wirUeberUns/Presse">{{ T "APress" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "AChronicle" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "AChronicle" }}</a>
                                 </li>
                             </ul>
                         </div>
@@ -66,10 +66,10 @@
                                     <a href="Versorgung/BrunnenbauAktuell">{{ T "wwDCleanWater" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDMedicine" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDMedicine" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDMedicalStore" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDMedicalStore" }}</a>
                                 </li>
                             </ul>
                         </div>
@@ -78,10 +78,10 @@
                             <img src="/img/educationMan.png" alt="Bildung">
                             <ul>
                                 <li>
-                                    <a href="#">{{ T "wwDTutoring" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDTutoring" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDEnlightenment" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDEnlightenment" }}</a>
                                 </li>
                             </ul>
                         </div>
@@ -93,13 +93,13 @@
                                     <a href="HilfeZurSelbsthilfe/Gemuesegarten">{{ T "wwDVegetableGarden" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDAnimals" }}</a>
+                                    <a href="HilfeZurSelbsthilfe/Nutztiere">{{ T "wwDAnimals" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDEnvironment" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDEnvironment" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDOrphanages" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDOrphanages" }}</a>
                                 </li>
                             </ul>
                         </div>
@@ -108,10 +108,10 @@
                             <img src="/img/galerie.png" alt="Hile zur Selbsthilfe">
                             <ul>
                                 <li>
-                                    <a href="#">{{ T "wwDFotos" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDFotos" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#">{{ T "wwDChronicle" }}</a>
+                                    <a href="#" style="color: lightgray;">{{ T "wwDChronicle" }}</a>
                                 </li>
                             </ul>
                         </div>
