Presse und darkmode

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -42,7 +42,7 @@
 <script>
   // Darkmode
   var jsTheme = document.getElementById("js-theme-list");
-  if (localStorage.getItem("darkMode") == "true") {
+  if (localStorage.getItem("darkMode") == "false") {
       jsTheme.className = "light-theme";
   } else {
       jsTheme.className = "dark-theme";
