--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,7 +33,7 @@
 <script>
   // Darkmode
   var jsTheme = document.getElementById("js-theme-single");
-  if (localStorage.getItem("darkMode") == "true") {
+  if (localStorage.getItem("darkMode") == "false") {
       jsTheme.className = "light-theme";
   } else {
       jsTheme.className = "dark-theme";
