--- a/layouts/partials/common/header.html
+++ b/layouts/partials/common/header.html
@@ -5,7 +5,7 @@
                 <a href="" id="js-de" class="header-gray-item">DE</a>
                 <a href="" id="js-en" class="header-gray-item">EN</a>
                 <a href="" id="js-fr" class="header-gray-item">FR</a>
-                <a href="" class="header-gray-item"><i id="js-darkMode" class="fas fa-sun"></i></a>
+                <a href="" class="header-gray-item"><i id="js-darkMode" class="far fa-moon"></i></a>
             </nav>
             <a href="/" class="logo">
                 <img class="img-logo" src="/img/logo.png" alt="Haus der Sonne">
@@ -63,14 +63,18 @@
             // Dark mode    
             var jsTheme = document.getElementById("js-theme-header");
             var jsDarkMode = document.getElementById("js-darkMode");
-            if (localStorage.getItem("darkMode") == "true") {
-                jsDarkMode.classList.remove("fas", "fa-sun");
-                jsDarkMode.classList.add("far", "fa-moon");
-                jsTheme.className = "light-theme";
+            if (localStorage.getItem("darkMode")) {
+                if (localStorage.getItem("darkMode") == "false") {
+                    jsDarkMode.classList.remove("fas", "fa-sun");
+                    jsDarkMode.classList.add("far", "fa-moon");
+                    jsTheme.className = "light-theme";
+                } else {
+                    jsDarkMode.classList.remove("far", "fa-moon");
+                    jsDarkMode.classList.add("fas", "fa-sun");
+                    jsTheme.className = "dark-theme";
+                }
             } else {
-                jsDarkMode.classList.remove("far", "fa-moon");
-                jsDarkMode.classList.add("fas", "fa-sun");
-                jsTheme.className = "dark-theme";
+                localStorage.setItem("darkMode", "false");
             }
             
             jsDarkMode.addEventListener("click", function() {
