--- a/layouts/partials/home/mainswiper.html
+++ b/layouts/partials/home/mainswiper.html
@@ -20,7 +20,7 @@
     <script>
         // Dark mode    
         var jsSwipers = document.getElementById("js-theme-swipers");
-        if (localStorage.getItem("darkMode") == "true") {
+        if (localStorage.getItem("darkMode") == "false") {
             jsSwipers.className = "light-theme";
         } else {
             jsSwipers.className = "dark-theme";
