--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -28,7 +28,7 @@
   <script>
     // Darkmode
     var jsTheme = document.getElementById("js-theme-home");
-    if (localStorage.getItem("darkMode") == "true") {
+    if (localStorage.getItem("darkMode") == "false") {
         jsTheme.className = "light-theme";
     } else {
         jsTheme.className = "dark-theme";
