--- a/public/scss/main.css
+++ b/public/scss/main.css
@@ -1413,14 +1413,28 @@
   font-size: 18px;
   font-family: "Calibri", sans-serif; }
 
+.light-theme .home-introduction {
+  text-align: center;
+  background-color: #e3e2d4;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin-top: 0px; }
+
 .dark-theme .home-main {
   padding-bottom: calc((100% - 90%) / 2);
   font-size: 18px;
   font-family: "Calibri", sans-serif; }
 
+.dark-theme .home-introduction {
+  text-align: center;
+  background-color: #575651;
+  padding: 20px;
+  margin-bottom: 20px;
+  margin-top: 0px; }
+
 .light-theme .swipers {
-  background-color: white;
-  height: calc(var(--viewable-height) - 120px + 50px); }
+  background-color: #e3e2d4;
+  height: calc(var(--viewable-height) - 120px + 0px); }
 
 .light-theme .mainswiper {
   max-width: 100%;
@@ -1580,7 +1594,7 @@
 
 .dark-theme .swipers {
   background-color: #575651;
-  height: calc(var(--viewable-height) - 120px + 50px); }
+  height: calc(var(--viewable-height) - 120px + 0px); }
 
 .dark-theme .mainswiper {
   max-width: 100%;
@@ -2976,7 +2990,7 @@
   transition: transition 0.15s ease-in-out; }
 
 .light-theme button:hover {
-  transform: scale(1.01);
+  transform: scale(1.05);
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); }
 
 .light-theme input[type="checkbox"] {
@@ -3169,7 +3183,7 @@
   transition: transition 0.15s ease-in-out; }
 
 .dark-theme button:hover {
-  transform: scale(1.01);
+  transform: scale(1.05);
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.3); }
 
 .dark-theme input[type="checkbox"] {
