--- a/layouts/partials/home/mainswiper.html
+++ b/layouts/partials/home/mainswiper.html
@@ -27,8 +27,12 @@
         }
 
         // Viewable area
+        let height = window.innerHeight;
         function updateViewableArea() {
-            const height = window.innerHeight;
+            if (window.innerHeight < height || window.innerHeight > height * 1.1) {
+                height = window.innerHeight;
+            }
+            // const height = window.innerHeight;
             document.documentElement.style.setProperty('--viewable-height', `${height}px`);
         }
 
