--- a/assets/scss/common-styles/markdown.scss
+++ b/assets/scss/common-styles/markdown.scss
@@ -240,7 +240,7 @@
     // *******************************************************
     // ** Message Box
     // *******************************************************
-    #message-box {
+    #message-box, #message-box-fehler{
         display: flex;
         flex-direction: column;
         align-items: center;
