--- a/layouts/partials/common/megamenu.html
+++ b/layouts/partials/common/megamenu.html
@@ -63,7 +63,7 @@
                                     <a href="Versorgung/EineWarmeMahlzeit">{{ T "wwDOneMeal" }}</a>
                                 </li>
                                 <li>
-                                    <a href="Versorgung/BrunnenbauAktuell">{{ T "wwDCleanWater" }}</a>
+                                    <a href="Versorgung/Brunnenbau_6">{{ T "wwDCleanWater" }}</a>
                                 </li>
                                 <li>
                                     <a href="#" style="color: lightgray;">{{ T "wwDMedicine" }}</a>
@@ -78,10 +78,10 @@
                             <img src="/img/educationMan.png" alt="Bildung">
                             <ul>
                                 <li>
-                                    <a href="#" style="color: lightgray;">{{ T "wwDTutoring" }}</a>
+                                    <a href="Bildung/Nachhilfe">{{ T "wwDTutoring" }}</a>
                                 </li>
                                 <li>
-                                    <a href="#" style="color: lightgray;">{{ T "wwDEnlightenment" }}</a>
+                                    <a href="Bildung/Aufklaerung">{{ T "wwDEnlightenment" }}</a>
                                 </li>
                             </ul>
                         </div>
