--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -50,6 +50,8 @@
 
   // Viewable area
   let height = window.innerHeight;
+  document.documentElement.style.setProperty('--viewable-height', `${height}px`);
+  
   function updateViewableArea() {
     if (window.innerHeight < height || window.innerHeight > height * 1.2) {
         height = window.innerHeight;
