Backend Adresse + Gemüsegarten

--- a/assets/scss/common-styles/markdown.scss
+++ b/assets/scss/common-styles/markdown.scss
@@ -135,6 +135,11 @@
         cursor: pointer;
     }
 
+    .img-flexpictures-width {
+        height: auto;
+        width: 80%;
+        cursor: pointer;
+    }
 
     // *******************************************************
     // ** Smallest picture in textflow
