--- a/layouts/shortcodes/gallery-videos.html
+++ b/layouts/shortcodes/gallery-videos.html
@@ -9,8 +9,13 @@
         {{ $files := readDir $subPath }}
         <div id="gallery" class="gallery">
             {{ range $files }}
+                {{ $cleanName := replaceRE "\\.(jpg|jpeg|png|gif|mp4)$" "" .Name }}
                 {{ if findRE "\\.mp4$" .Name }}
-                    <video src="{{ printf "/img/Galerie/%s/%s" $folderName .Name }}"  controls title="{{ .Name }}"></video>
+                    <div class="media-container">
+                        <div class="media-title">{{ $cleanName }}</div>
+                        <video src="{{ printf "/img/Galerie/%s/%s" $folderName .Name }}"  controls title="{{ .Name }}"></video>
+                    </div>
+                    
                 {{ end }}
             {{ end }}
         </div>
