--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -51,12 +51,14 @@
   // Viewable area
   let height = window.innerHeight;
   document.documentElement.style.setProperty('--viewable-height', `${height}px`);
-  
+  document.documentElement.style.setProperty('--pagepicture-height', `${height}px`);
+
   function updateViewableArea() {
+    document.documentElement.style.setProperty('--viewable-height', `${window.innerHeight}px`);
     if (window.innerHeight < height || window.innerHeight > height * 1.2) {
         height = window.innerHeight;
     }
-    document.documentElement.style.setProperty('--viewable-height', `${height}px`);
+    document.documentElement.style.setProperty('--pagepicture-height', `${height}px`);
   }
 
   window.addEventListener('resize', updateViewableAreaList);
